--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <div class="section">
       <h2 class="emoji">💳 Preço Promocional: R$9,90</h2>
       <p>(Pode pagar por cartão, Pix ou boleto)</p>
-      <a class="button" href="https://SEULINKDAKIWIFY.com">🚀 Comprar agora</a>
+      <a class="button" href="https://pay.kiwify.com.br/y8NtVJx">🚀 Comprar agora</a>
     </div>
 
     <div class="faq section">
